# hangman-game

./: .gitignore  CMakeList.txt  CMakeLists.txt  CMakelists.txt  README.md  appicon.rc.in  build.bat  docg.conf  package-lock.json  sonar-project.properties  vcpkg.json  versioninfo.rc.cmake.in
.github/: dependabot.yml
.github/workflows/: build-osx.yml  build-windows.yml  clang-tidy.yml  clean-history.yml  clear.yml  client-light.yml  client.yml  cmake.yml  codeql-analysis.yml  cppcheck.yml  default-windows.yml  default.yml  (+2 more)
client/: .env  .eslintrc.js  .gitignore  .nyrc.json  .prettierrc  .stylelintrc.json  README.md  babel.config.js  cypress.conf.ts  cypress.config.js  cypress.json  mocha-multi-config.json  package-lock.json  package.json  sonar-project.properties  styleguide.config.js  tsconfig.json  webpack.config.js
data-management/: .gitignore  CMakeLists.txt  appicon.rc  config.hpp.in  sonar-project.properties  versioninfo.rc.cmake.in
data-management/cmake/Modules/: FindODB.cmake
data-management/configuration/: README.md
data-management/resources/: model.xml
data-management/resources/database-order/: create-dictionary.xml  create-user.xml  create-users.xml  create-word.xml  create-words.xml
data-management/resources/database-order/login-logout/: create-login-user.xml  login-user.xml  logout-user.xml
data-management/src/: CMakeLists.txt  main.cpp
data-management/src/TCP/: Client.cpp  Client.hpp  Server.cpp  Server.hpp  Session.cpp  Session.hpp
data-management/src/connector/: database.hxx  database.sql
data-management/src/endpoint/: CRUDOrderDispatcher.cpp  CRUDOrderDispatcher.hpp  DataAccess.cpp  DataAccess.hpp  GroupeOrderDispatcher.cpp  GroupeOrderDispatcher.hpp  StatusCode.hpp  UserDBEndpoint.cpp  UserDBEndpoint.hpp  UserOrderDispatcher.cpp  UserOrderDispatcher.hpp  status_code.hpp
data-management/src/ext/: Client.cpp  ClientDataManager.cpp
data-management/src/model/: chat.hxx  dictionary.hxx  group.hxx  message.hxx  model_error.hpp  party.hxx  root_model_object.hxx  team.hxx  user-odb.cxx  user-odb.hxx  user-odb.ixx  user.cpp  user.hxx  validatior.hpp  validator.hpp  word.cxx  word.hxx
data-management/src/serializer/: UserSerializer.hpp
data-management/test/: CMakeLists.txt  main.cpp  testDatabasePersistency.cpp
data-management/test/TCP/: Client.cpp
data-management/test/ut/: CMakeLists.txt  main.cpp  testDatabaseBiDirectionnalPersistency.cpp  testDatabasePersistency.cpp  testLoginLogout.cpp  testUserEndpointErrors.cpp  testUserEndpointNominal.cpp  testWordEndpointNominal.cpp  testWordEndpointNominal.cpp.disable
data-management/tools/: CMakeLists.txt  audit-dependency-install-odb-report.json  build-dev.bat  build-model-only.bat  build.bat  install-odb.mjs  main.cpp  package-lock.json  package.json
data-management/tools/install-odb/: .gitignore  jsdoc.conf.json  package-lock.json  package.json
data-management/tools/install-odb/src/: main.mjs
data-management/tools/model-generator/: .eslintrc.js  .gitignore  audit-dependency-model-generator-report.json  generateCRUDOrderDispatcher.mjs  loader.mjs  main.mjs  package-lock.json  package.json  stats.json  tsconfig.json  webpack.config.mjs
data-management/tools/model-generator/src/: generateCRUDOrderDispatcher.mjs  generateCRUDOrderDispatcher.ts  generateTsClass.mjs  generateTsClass.ts  generateTsClasses.mjs  loader.mjs  loader.ts  main.mjs  main.ts  modelTypes.ts  utils.mjs  utils.ts
data-management/tools/model-generator/templates/: CRUDOrderDispatcher.tlat  TsClasses.tlat
data-management/tools/model-generator/tools/webpack/: PostBuildPlugin.mjs
server/: .gitignore  CMakeLists.txt  appicon.rc  config.hpp.in  sonar-project.properties  versioninfo.rc.cmake.in
server/configuration/: mime-types.xml  servers.xml
server/docs/: api_doc.json
server/resources/: configuration.xml  data.json
server/scripts/: build.bat  coverage.bat  run-ut.bat
server/src/: CMakeLists.txt  main.cpp  main.hpp
server/src/HTTP/: RestrictiveEndpoint.hpp
server/src/api/: HttpFruitsEndpoint.hpp  HttpRestrictiveEndpoint.hpp  HttpTokenEndpoint.cpp  HttpTokenEndpoint.hpp
server/src/api/game/: GameEndPoint.cpp  GameEndPoint.hpp
server/src/common/HTTP/: HttpListener.cpp  HttpListener.hpp  HttpServer.cpp  HttpServer.hpp  HttpSession.cpp  HttpSession.hpp  HttpUtils.cpp  HttpUtils.hpp  Listener.cpp  Listener.hpp  LocationEndpoint.cpp  LocationEndpoint.hpp  RestrictiveEndpoint.hpp  Server.cpp  Server.hpp  Session.cpp  Session.hpp  Utils.cpp  Utils.hpp
server/src/common/HTTP/Configuration/: ConfigurationServer.cpp  ConfigurationServer.hpp
server/src/common/HTTP/Exception/: ConfigurationException.hpp  HangmanGameException.hpp  ParsingException.hpp  SerializationException.hpp
server/src/common/Logger/: Logger.cpp  Logger.hpp  LoggerConsole.cpp  LoggerConsole.hpp  LoggerFile.cpp  LoggerFile.hpp
server/src/common/model/: user.hxx
server/src/common/odb/: database.hxx
server/src/model/: HttpRequest.hpp
server/test/: CMakeLists.txt  package-lock.json  package.json  run-it.sh  run-tests.mjs  run-tests.sh  run-ti.sh  testHttpUtils.cpp
server/test/it/: CMakeLists.txt  httpClient.cpp  main.cpp  testEndpoints.cpp
server/test/it/resources/endpoints/: token.xml
server/test/requests/: thunder-collection_Requests API.json  token.http-request
server/test/ut/: CMakeLists.txt  main.cpp  testConfigurationServer.cpp  testDatabasePersistency.cpp  testHttpUtils.cpp  testRestrictiveEndpoint.cpp
tools/: cpackage.bat  docker-install.sh  generate-docs.bat  parser-example.cpp  sonar-project.properties  updater.bash
tools/cppcheck-to-sonarqube/: .gitignore  CMakeLists.txt  cpp-convert.properties.xml  sonar-project.properties
tools/cppcheck-to-sonarqube/scripts/: build.bat
tools/cppcheck-to-sonarqube/src/: main.cpp
tools/cppcheck-to-sonarqube/src/report/: convertor.cpp  convertor.hpp
tools/cppcheck-to-sonarqube/test/resources/: example.xml
tools/cppcheck-to-sonarqube/test/ut/: main.cpp  testConvertor.cpp
wiki/: components.dot  contribution-design-rules.md  dev-rules.md  manifests-descriptions.md
(+142 files in other folders)
