# define C++ version on standard in parent 

set(APPLICATION_NAME "${PROJECT_NAME}-data-management-Tests")
set(APPLICATION_DESCRIPTION "${APPLICATION_NAME} Tests connector application")
set(APPLICATION_ICON_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../resources/icon/data-management/data-management.ico)

add_subdirectory(./ut)